# ComfyUI-VideoChatWrapper

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
demo-workflows/: videochat-demo.json
nodes/: audio.py  utils.py
videochat/: nodes.py  utils.py
web/js/: vcw.core.js
