[project]
name = "ComfyUI-VideoChatWrapper"
description = "Nodes related to video chat workflows"
version = "1.0.3"
license = { file = "LICENSE" }
dependencies = ["qwen_vl_utils"]

[project.urls]
Repository = "https://github.com/lebrosoft/ComfyUI-VideoChatWrapper"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "jida-ai"
DisplayName = "ComfyUI-VideoChatWrapper"
Icon = ""
